assetocorso-stack/assetocorso-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetto-corsa-server
  namespace: assetocorso-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetto-corsa-server
  template:
    metadata:
      labels:
        app: assetto-corsa-server
        role: assetto-corsa-server
    spec:
      securityContext:
        fsGroup: 0
      containers:
        - name: assetto-corsa-server
          image: germanrcuriel/assetto-corsa-server
          ports:
            - name: ac-http
              containerPort: 8081
              protocol: TCP
            - name: ac-tcp
              containerPort: 9600
              protocol: TCP
            - name: ac-udp
              containerPort: 9600
              protocol: UDP
            - name: stracker
              containerPort: 50041
              protocol: TCP
            - name: ptracker
              containerPort: 50042
              protocol: TCP
          volumeMounts:
            - name: steamapps
              mountPath: /steamapps
      volumes:
        - name: steamapps
          persistentVolumeClaim:
            claimName: assetto-corsa-steamapps-pvc
