assetocorso-stack/assetocorso-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assetto-corsa-server-service
  namespace: assetocorso-stack
spec:
  selector:
    app: assetto-corsa-server
  ports:
    - name: ac-http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: stracker
      protocol: TCP
      port: 50041
      targetPort: 50041
    - name: ptracker
      protocol: TCP
      port: 50042
      targetPort: 50042
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: assetto-corsa-server-nodeport-service
  namespace: assetocorso-stack
spec:
  type: NodePort
  selector:
    app: assetto-corsa-server
  ports:
    - name: ac-tcp
      protocol: TCP
      port: 9600
      targetPort: 9600
      nodePort: 30960 # Assetto Corsa TCP port
    - name: ac-udp
      protocol: UDP
      port: 9600
      targetPort: 9600
      nodePort: 30961 # Assetto Corsa UDP port
